Fixed mobile layout clipping for WhatIDo and Career sections

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -41,10 +41,8 @@
 }
 .what-content {
   width: 450px;
-  height: 33%;
-  min-height: 50%;
+  min-height: 250px;
   transition: 0.5s;
-  /* border: 0.5px dashed rgba(255, 255, 255, 0.3); */
   position: relative;
   padding: 50px;
   box-sizing: border-box;
@@ -52,14 +50,14 @@
 
 .what-noTouch:hover,
 .what-content-active {
-  min-height: 67%;
+  min-height: 350px;
   padding: 40px 50px;
 }
 
 .what-noTouch:hover ~ .what-content,
 .what-box-in:hover .what-noTouch:not(:hover),
 .what-content.what-sibling {
-  min-height: 33%;
+  min-height: 150px;
   padding: 10px 50px;
 }
 .what-content h3 {
@@ -290,7 +288,8 @@
     padding-bottom: 50px;
   }
   .what-box-in {
-    height: 500px;
+    height: auto;
+    min-height: 550px;
     margin-left: -50px;
   }
   .what-content {
@@ -338,7 +337,8 @@
   }
   .what-box-in {
     margin-left: 0px;
-    height: 450px;
+    height: auto;
+    min-height: 500px;
   }
   .what-content h5,
   .what-content-flex {
